--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,19 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=bestuser
-spring.datasource.password=bestuser
+#spring.datasource.url=jdbc:mysql://localhost:3306/db
+#spring.datasource.username=user
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.url=jdbc:h2:mem:myDb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.session.store-type=jdbc
+
+server.port=8081
